[project]
authors = [
  {name = "Massimo Mauri"},
]
dynamic = ["version"]
dependencies = [
  "click>=8.2.1",
  "httpx>=0.28.1",
  "office365-rest-python-client>=2.6.2",
  "openpyxl>=3.1.5",
  "pandas>=2.3.0",
  "pydantic>=2.11.7",
]
description = "fetchpoint"
name = "fetchpoint"
readme = "README.md"
requires-python = ">=3.10,<3.14"

[project.scripts]
tbd = "fetchpoint.tbd_cli:cli"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
exclude = [
  "**/__tests__/**",
  "**/test_*.py",
]
include = [
  "src/fetchpoint/py.typed",
]
packages = ["src/fetchpoint"]

[tool.hatch.version]
path = "src/fetchpoint/__init__.py"

[dependency-groups]
dev = [
  "pandas-stubs>=2.3.0.250703",
  "pyright>=1.1.403",
  "ruff>=0.12.0",
]
test = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.2.1",
  "pytest-mock>=3.14.1",
]
